--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,50 @@
-body {
-    width: 100vw;
-    height: 100vh;
-    margin: 0;
-
-    
-
-}
+* {
+            box-sizing: border-box;
+        }
+        body {
+            margin: 0;
+            padding: 0;
+            padding-top: 50px;
+        }
+        .container {
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+        }
+        .btn {
+            margin: 5px 0;
+            font-size: 15px;
+            padding: 5px 5px;
+            background-color: transparent;
+            border: 1px solid #000;
+            user-select: none;
+            cursor: pointer;
+        }
+        .mixers {
+            width: 250px;
+            height: 220px;
+            border: 1px solid #000;
+            border-radius: 5px;
+        }
+        .mixer {
+            width: 100px;
+            height: 100px;
+            line-height: 100px;
+            text-align: center;
+            border: 1px solid #000;
+            border-radius: 50%;
+        }
+        .elementCard {
+            padding: 0;
+            width: 60px;
+            height: 60px;
+            text-align: center;
+            border-radius: 3px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            vertical-align: middle;
+        }
+        .buttons {
+            text-align: center;
+        }
